--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "joi": "^17.13.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "@eslint/js": "^9.4.0",
+    "eslint": "^9.4.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.4.0",
+    "nodemon": "^3.1.0",
+    "prettier": "^3.3.1"
   }
 }
